# discord-tier-list-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml  config-docker.toml  config.toml  docker-compose.yml
commands/: Cargo.toml
commands/src/: get.rs  help.rs  init.rs  lib.rs  main_.rs  other.rs  update.rs
core/: Cargo.toml
core/src/: common.rs  constants.rs  database.rs  database_models.rs  errors.rs  framework.rs  lib.rs  macros.rs  structs.rs  traits.rs
data/: init.sql
events/: Cargo.toml
events/src/: guild.rs  lib.rs  member.rs  message.rs  other.rs  ready.rs
migrations/: Cargo.toml
src/: main.rs  startup.rs
tasks/: Cargo.toml
tasks/src/: config.rs  create.rs  create_db.rs  delete.rs  lib.rs  select.rs  upsert.rs
