[package]
name = "discord-tier-list-bot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "core",
    "events",
    "tasks",
    "commands",
    "migrations",
]

[profile.release]
lto = "thin"
panic = "abort"
debug = 2

[dependencies]
const_format = "0.2"

sqlx.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
poise.workspace = true

core = { path = "core" }
tasks = { path = "tasks" }
commands = { path = "commands" }
events = { path = "events" }
migrations = { path = "migrations" }

[workspace.dependencies]
serde = "1"
serde_json = "1.0.120"
serenity-commands = "0.4.3"
serenity_utils = "0.7.0"
anyhow = "1"
typesize = { version = "0.1.2", features = ["arrayvec"] }
to-arraystring = { version = "0.2.2", features = ["nonzero_impls"] } 

[workspace.dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "postgres", "runtime-tokio-rustls"]

[workspace.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls"]

[workspace.dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "signal", "parking_lot"]

[workspace.dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
features = ["typesize", "temp_cache"]
default-features: false
branch = "next"

[workspace.dependencies.poise]
git = "https://github.com/serenity-rs/poise"
features = ["cache"]
branch = "serenity-next"
