[package]
name = "discord-tier-list-bot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "core",
    "events",
    "tasks",
    "commands",
    "migrations",
]

[profile.release]
lto = "thin"
panic = "abort"
debug = 2

[dependencies]
const_format = "0.2"
small-fixed-array = { version = "0.4.5", features = [
    "nightly",
    "to-arraystring",
] }

sqlx.workspace = true
serde.workspace = true
tokio.workspace = true
poise.workspace = true
anyhow.workspace = true
sysinfo.workspace = true
tracing.workspace = true
reqwest.workspace = true
dashmap.workspace = true
parking_lot.workspace = true

core = { path = "core" }
tasks = { path = "tasks" }
commands = { path = "commands" }
events = { path = "events" }
migrations = { path = "migrations" }

[workspace.dependencies]
regex = "1"
serde = "1"
serde_json = "1.0.120"
anyhow = "1"
tracing = "0.1"
sysinfo = "0.30"
aformat = "0.1.3"
itertools = "0.13"
arrayvec = "0.7.4"
parking_lot = "0.12"
typesize = { version = "0.1.2", features = ["arrayvec"] }
to-arraystring = { version = "0.2.2", features = ["nonzero_impls"] } 

[workspace.dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "postgres", "runtime-tokio-rustls"]

[workspace.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls"]

[workspace.dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "signal", "parking_lot"]

[workspace.dependencies.dashmap]
version = "6"
default-features = false

[workspace.dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
features = ["typesize", "temp_cache"]
default-features = false
branch = "next"

[workspace.dependencies.poise]
git = "https://github.com/serenity-rs/poise"
features = ["cache"]
branch = "serenity-next"
