[package]
name = "discord-tier-list-bot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "core",
    "events",
    "commands",
    "tasks",
]

[profile.release]
lto = "thin"
panic = "abort"
debug = 2

[dependencies]
extract_map = "0.1.2"
dotenv = "0.15.0"

serde.workspace = true
tokio.workspace = true
poise.workspace = true
reqwest.workspace = true

core = { path = "core" }
events = { path = "events" }
commands = { path = "commands" }
tasks = { path = "tasks" }

[workspace.dependencies]
serde = "1"

[workspace.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls"]

[workspace.dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "signal", "parking_lot"]

[workspace.dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
default-features = true 
branch = "next"

[workspace.dependencies.poise]
git = "https://github.com/serenity-rs/poise"
features = ["cache"]
branch = "serenity-next"
