[package]
name = "events"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.152"

poise.workspace = true
tokio.workspace = true
regex.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
aformat.workspace = true
serenity.workspace = true
to-arraystring.workspace = true

core = { path = "../core" }
tasks = { path = "../tasks" }
